fix: ensure visible overflow time label on Pieces (#367)
* fix: ensure that the content-overflow-time label is always legible

* feat: restyle overflow counters

--- a/meteor/client/styles/rundownView.scss
+++ b/meteor/client/styles/rundownView.scss
@@ -1633,6 +1633,8 @@ body.no-overflow {
 								right: 0;
 								transform: translate3d(0, 0, 15px);
 								text-align: right;
+								margin: 0;
+								padding: 0 0.3em;
 								max-width: calc(100% - 10px);
 								overflow: hidden;
 								text-overflow: clip;
@@ -1655,10 +1657,6 @@ body.no-overflow {
 								> .label-icon.label-infinite-icon {
 									margin: 0 0 0 0;
 								}
-
-								> .last-words {
-									float: right;
-								}
 							}
 
 							&.last-words {
@@ -1677,8 +1675,15 @@ body.no-overflow {
 							}
 
 							&.label-overflow-time {
-								font-weight: 300;
-								padding-right: 10px;
+								text-shadow: 1px -1px 1px black, -1px 1px 1px black, -1px -1px 1px black, 1px 1px 1px black,
+									1px 1px 3px black, 1px 1px 8px black, 1px 1px 8px black, 1px 1px 8px black;
+								top: -7px;
+								right: -5px;
+								color: white;
+								font-weight: 600;
+								padding: 0;
+								font-size: 0.8em;
+								margin: 0;
 							}
 
 							> .segment-timeline__piece__label {
